--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,64 @@
 @import 'variaveis.less';
+@breakpointMobile: ~"(max-width: 767px)";
+@breakpointTablet: ~" (min-width: 768px) and (max-width: 1023px)";
+
+.marginBottom8px {
+  margin-bottom: 8px;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+  list-style: none;
+}
 
 body{
   background-color: @corDeFundo;
   color: @corDosTextos;
+}
+
+.container{
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+  
+  @media @breakpointMobile {
+    max-width: 70%;
+  }
+
+  @media @breakpointTablet{
+    max-width: 80%;
+  }
+}
+
+header{
+  padding: 24px;
+
+  .profile-avatar{
+    display: block;
+    margin: 0 auto 24px;
+    border-radius: 50%;
+  }
+}
+
+.profile-bio{
+  text-align: center;
+
+  &-name{
+    font-size: 16px;
+    .marginBottom8px();
+  }
+
+  &-subtitle{
+    font-size: 14px;
+    .marginBottom8px();
+  }
+
+  &-description{
+    font-size: 14px;
+    opacity: 0.7;
+  }
 }
