--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,4 @@
-@import 'variaveis.less';
+@import 'mapas.less';
 @breakpointMobile: ~"(max-width: 767px)";
 @breakpointTablet: ~" (min-width: 768px) and (max-width: 1023px)";
 
@@ -16,8 +16,8 @@
 }
 
 body{
-  background-color: @corDeFundo;
-  color: @corDosTextos;
+  background-color: #colors[background-color];
+  color: #colors[Text-color];
 }
 
 .container{
@@ -60,5 +60,20 @@ header{
   &-description{
     font-size: 14px;
     opacity: 0.7;
+  }
+}
+
+.social-links{
+  display: flex;
+  justify-content: space-between;
+  max-width: 240px;
+  width: 100%;
+  margin: 0 auto;
+
+  img{
+    transition: all ease .3s;
+    &:hover{
+      transform: scale(1.2);
+    }
   }
 }
