--- a/src/styles/mapas.less
+++ b/src/styles/mapas.less
@@ -1,5 +1,5 @@
 #colors() {
-  background-color: #0B2559;
-  button-color: #327355;
-  Text-color: #f5f6fa;
+  backgroundColor: #0B2559;
+  buttonColor: #3CA6A6;
+  TextColor: #f5f6fa;
 }
