--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,5 @@
 @import 'mapas.less';
+
 @breakpointMobile: ~"(max-width: 767px)";
 @breakpointTablet: ~" (min-width: 768px) and (max-width: 1023px)";
 
@@ -16,14 +17,18 @@
 }
 
 body{
-  background-color: #colors[background-color];
-  color: #colors[Text-color];
+  background-color: #colors[backgroundColor];
+  color: #colors[TextColor];
 }
 
 .container{
   max-width: 960px;
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   
   @media @breakpointMobile {
     max-width: 70%;
@@ -35,12 +40,18 @@ body{
 }
 
 header{
-  padding: 24px;
+  padding-bottom: 24px;
 
   .profile-avatar{
     display: block;
     margin: 0 auto 24px;
+    width: 120px; 
+    height: 120px; 
+    object-fit: cover; 
+    object-position: center;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -74,6 +85,27 @@ header{
     transition: all ease .3s;
     &:hover{
       transform: scale(1.2);
+    }
+  }
+}
+
+.projects-list{
+  margin-top: 32px;
+  &-item a{
+    background-color: #colors[buttonColor];
+    display: block;
+    padding: 16px 20px;
+    margin-bottom: 16px;
+    text-align: center;
+    color: #colors[TextColor];
+    font-weight: bold;
+    border-radius: 30px;
+    border: 2px solid #colors[buttonColor];
+    transition: .5s;
+
+    &:hover{
+      color: #colors[buttonColor];
+      background-color: transparent;
     }
   }
 }
